# charvis

./: easy-settings.cmake
projects/charvis/: CMakeLists.txt  readme.txt  settings.cmake
projects/charvis/hypervisor_task/: CMakeLists.txt
projects/charvis/hypervisor_task/include/: hypervisor.h
projects/charvis/hypervisor_task/src/: task_hypervisor.c
projects/charvis/root_task/Arm/: CMakeLists.txt  main.c  settings.cmake
projects/charvis/terminal_task/: CMakeLists.txt
projects/charvis/terminal_task/include/: terminal.h
projects/charvis/terminal_task/src/: task_terminal.c
test/: .ninja_deps  .ninja_log  CMakeCache.txt  ast.pickle.cmd  build.ninja  cmake_install.cmake  gcc.cmake  launch_gdb  rules.ninja  simulate  virt.dtb  virt.dts
test/camkes-putchar-client/: cmake_install.cmake
test/camkes-tool/: cmake_install.cmake
test/camkes-tool/libcamkescakeml/: cmake_install.cmake
test/capdl/: cmake_install.cmake
test/capdl/object_sizes/: cmake_install.cmake
test/elfloader/: archive.archive.o.cpio  cmake_install.cmake  elfloader
test/hypervisor_task/: cmake_install.cmake
test/images/: hello-charvis-image-arm-tx2
test/kernel/: cmake_install.cmake  dts.cmd  gen_header.cmd  kernel.dtb  kernel.dts  kernel.elf  kernel_all_pp_prune_wrapper_temp.c  linker.lds_pp
test/libFileServer-client/: cmake_install.cmake
test/libsel4/: cmake_install.cmake
test/projects_libs/: cmake_install.cmake
test/seL4_libs/: cmake_install.cmake
test/sel4_projects_libs/: cmake_install.cmake
test/terminal_task/: cmake_install.cmake
test/util_libs/: cmake_install.cmake
(+126 files in other folders)
